2007-10-05  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.7-rc3
	* ChangeLog, check_dbmail_misc.c, misc.c, misc.h:
	work around incomplete utf7 decoding by gmime (bug #649)
	* ChangeLog, dbmail-mailbox.c, dbmail-mailbox.h:
	respect charset argument during search (bug #646)
	* dbmail.h.in:
	fix build for freebsd after _XOPEN_SOURCE change

2007-10-02  Paul Stevens <paul@nfg.nl>

	* ChangeLog, pipe.c:
	limit the scope of the transaction during message insertion to avoid 
	deadlocks
	* check_dbmail_misc.c, misc.c:
	generate better randomness by using the glib calls in create_unique_id

2007-09-30  Paul J Stevens <paul@nfg.nl>

	* dbmail.h.in:
	fix bug #643

2007-09-28  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c, dbmail-mailbox.h:
	respect charset argument during search (bug #646)

2007-09-23  Aaron Stone  <aaron@serendipity.cx>

	* modules/sortsieve.c:
	Comment out send_alert for execution errors (always caused by
	malformed addresses at this time, and very annoying).
	Clean up the send_notify function and clarify that it is unsupported
	at this time.

2007-09-18  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	tag and release 2.2.7-rc1

2007-09-16  Paul Stevens <paul@nfg.nl>

	* ChangeLog, misc.c:
	fix regression

2007-09-15  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/control, debian/dbmail.postinst, 
	debian/dbmail.postrm, debian/patches/00-etch.dpatch, 
	debian/patches/00list, debian/rules:
	debian updates
	* debian/changelog:
	v2.2.6
	* ChangeLog:
	blah

2007-09-14  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_message.c, db.c, dbmail-imapsession.c, misc.c:
	valgrind cleanups

2007-09-05  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix regression for bug #634 (bug #642)

2007-09-02  Paul J Stevens <paul@nfg.nl>

	* sql/postgresql/create_tables.pgsql, 
	sql/postgresql/migrate_from_2.0_to_2.2.pgsql:
	fix typo

2007-08-31  Paul J Stevens <paul@nfg.nl>
	* check_dbmail_db.c, db.c:
	fix regression for bug #639 (bug #641)
