@@ -1825,9 +1825,8 @@ int dbmail_imap_session_mailbox_status(struct ImapSession * self, gboolean updat
 	unsigned oldexists, oldrecent, olduidnext;
         struct DbmailMailbox *mailbox = NULL;
 	gboolean showexists = FALSE;
-	static int idle_keepalive = 0;
 	imap_userdata_t *ud = (imap_userdata_t *) self->ci->userData;
-	if (! ud->state == IMAPCS_SELECTED)
+	if (ud->state != IMAPCS_SELECTED)
 		return 0;
 
 	oldexists = ud->mailbox.exists;
@@ -1862,12 +1861,6 @@ int dbmail_imap_session_mailbox_status(struct ImapSession * self, gboolean updat
 	// EXPUNGE
 	switch (self->command_type) {
 		case IMAP_COMM_IDLE:
-			// send a keepalive message every 10 * IDLE_TIMEOUT seconds
-			// this will cause most clients to issue a DONE/IDLE cycle
-			if (idle_keepalive++ == 10) {
-				dbmail_imap_session_printf(self, "* OK\r\n");
-				idle_keepalive = 0;
-			}
 		case IMAP_COMM_NOOP:
 		case IMAP_COMM_CHECK:
 		case IMAP_COMM_SELECT:
@@ -2008,13 +2001,14 @@ int dbmail_imap_session_mailbox_open(struct ImapSession * self, const char * mai
 }
 
 #define IDLE_BUFFER 8
-int dbmail_imap_session_mailbox_idle(struct ImapSession *self)
+int dbmail_imap_session_idle(struct ImapSession *self)
 {
 	char buffer[IDLE_BUFFER];
 	int result = 0, idle_timeout = IDLE_TIMEOUT;
 	clientinfo_t *ci = self->ci;
 	field_t val;
-	
+	static int idle_keepalive = 0;
+
 	GETCONFIGVALUE("idle_timeout", "IMAP", val);
 	if ( strlen(val) && (idle_timeout = atoi(val)) <= 0 ) {
 		TRACE(TRACE_ERROR, "illegal value for idle_timeout [%s]", val);
@@ -2052,6 +2046,13 @@ int dbmail_imap_session_mailbox_idle(struct ImapSession *self)
 
 		if (alarm_occured) {
 			alarm_occured = 0;
+			// send a keepalive message every 10 * IDLE_TIMEOUT seconds
+			// this will cause most clients to issue a DONE/IDLE cycle
+			if (idle_keepalive++ == 10) {
+				dbmail_imap_session_printf(self, "* OK\r\n");
+				idle_keepalive = 0;
+			}
+	
 			dbmail_imap_session_mailbox_status(self,TRUE);
 			continue;
 		}
