@@ -84,7 +84,7 @@ int dbmail_imap_session_mailbox_check_acl(struct ImapSession * self, u64_t idnr,
 int dbmail_imap_session_mailbox_get_selectable(struct ImapSession * self, u64_t idnr);
 
 int dbmail_imap_session_mailbox_status(struct ImapSession * self, gboolean update);
-int dbmail_imap_session_mailbox_idle(struct ImapSession *self);
+int dbmail_imap_session_idle(struct ImapSession *self);
 int dbmail_imap_session_mailbox_show_info(struct ImapSession * self);
 int dbmail_imap_session_mailbox_open(struct ImapSession * self, const char * mailbox);
 int dbmail_imap_session_mailbox_close(struct ImapSession *self);
